--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
       <div class="outside">
         <div class="front">
-          <p>Happy Birthday</p>
+          <p>С днем рождения!</p>
           <div class="cake">
             <div class="top-layer"></div>
             <div class="middle-layer"></div>
@@ -24,7 +24,7 @@
         <div class="back"></div>
       </div>
       <div class="inside">
-        <p>Wishing you a very happy birthday filled with love and laughter</p>
+        <p>Дорогая Мама, поздравляю тебя с днем рождения! Ты самая прекрасная мама на свете и мне очень повезло с тобой! Желаю, чтобы твои глаза почаще светились от счастья!</p>
         <h1>&#127873;</h1>
       </div>
     </div>
